# allegro-cpp

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/allegro-cpp/: allegroInit.h  audioSample.h  color.h  display.h  event.h  eventQueue.h  font.h  rawScreenPainter.h  screenPainter.h  slice.h  textWriter.h  timer.h  vec.h
src/: allegroInit.cc  audioSample.cc  color.cc  display.cc  event.cc  eventQueue.cc  font.cc  meson.build  rawScreenPainter.cc  screenPainter.cc  textWriter.cc  timer.cc
